samples/_failures_safe/1761202848_b1e5d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2ded33b.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_e2ded33b.c:188:9: error: expected expression at end of input
  188 |         } else
      |         ^
./samples/SAFE/__tmp_e2ded33b.c:188:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2ded33b.c:188:9: error: expected declaration or statement at end of input
